# QT2

./: RUN.md  SETUP_GUIDE.md  config.py  main.py  requirements.txt  run_chart.py  run_dev.sh  train_calibrator.py
backtest/: engine.py
data/: base_provider.py  (+1 more)
sniper-framework/: .gitignore  README.md  pyproject.toml
sniper-framework/examples/: backtest_demo.py  minimal_strategy.py  momentum_strategy.py  regime_strategy.py
sniper-framework/sniper/: __init__.py
sniper-framework/sniper/backtest/: __init__.py  cpcv.py  dsr.py  engine.py  monte_carlo.py  results.py  walk_forward.py
sniper-framework/sniper/broker/: __init__.py  base_broker.py  exceptions.py  paper_broker.py  zerodha.py
sniper-framework/sniper/core/: __init__.py  algorithm.py  base_strategy.py  clock.py  event_bus.py
sniper-framework/sniper/data/: __init__.py  base_provider.py  csv_provider.py  subscription_manager.py  synthetic_provider.py  yfinance_provider.py
sniper-framework/sniper/execution/: __init__.py  cost_model.py  executor.py  slippage_model.py
sniper-framework/sniper/indicators/: __init__.py  base.py  moving_averages.py  oscillators.py  volatility.py
sniper-framework/sniper/regime/: __init__.py  hmm_detector.py  shock_detector.py  simple_detector.py
sniper-framework/sniper/risk/: __init__.py  portfolio_monitor.py  risk_manager.py  scenarios.py
sniper-framework/sniper/signals/: __init__.py  calibrator.py  meta_labeler.py  signal_filter.py
sniper-framework/tests/unit/: test_backtest.py  test_base_strategy.py  test_data.py  test_event_bus.py  test_indicators.py  test_phase3.py
(+53 files in other folders)
